--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/fabricio-cerci/clean-react#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -31,6 +32,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
+    "faker": "^6.6.6",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
