--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/fabricio-cerci/clean-react#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -39,5 +40,8 @@
     "lint-staged": "^13.0.3",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
