--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -42,6 +44,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
