--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/fabricio-cerci/clean-react#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@testing-library/react": "^13.3.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
